--- a/imports/header.css
+++ b/imports/header.css
@@ -1,7 +1,7 @@
 .header{
-     min-height: 100vh;
+     min-height: 100vh; 
      width: 100%;
-     background-image: url('/header.jpg');
+     background-image: url('/images/header.jpg');
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
